# Toker

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
src/: api_doc.rs  auth.rs  errors.rs  main.rs  models.rs
src/db/: auth_refresh_tokens.rs  client.rs  gifts.rs  migrations.rs  mod.rs  orders.rs  users.rs
src/handlers/: auth.rs  gifts.rs  health.rs  mod.rs  orders.rs  users.rs
src/services/: gifts.rs  mod.rs  orders.rs  users.rs
static/: app.js  index.html  style.css
web/: app.js  index.html  styles.css
